--- a/pages/invitindex/invitindex.wxml
+++ b/pages/invitindex/invitindex.wxml
@@ -5,15 +5,16 @@
         <image src='/public/images/bookfan.png' style="height:188rpx;width:178rpx" />
         <view style="padding-top:20rpx;font-size:20px;color:#333333;margin-left:50rpx;">EASON_CHAN<image src='/public/images/vip_1_5.png' style='width:60rpx;height:60rpx;margin-left:20rpx'/></view>
       </view>
+      <view style='text-align:center;color:#ccc;font-size:16px;'>微信号：dingke123456</view>
       <view>
-        <view style='float:left;margin:30rpx 0 0 10%;color:#333333;font-size:16px;width:50%'>已邀请好友10人</view>
-        <view style='float:left;margin:30rpx 0 0 0%;color:#333333;font-size:16px;'>获得奖励金20元</view>
+        <view style='float:left;margin:30rpx 0 0 10%;color:#333333;font-size:16px;width:50%'>TA邀请好友10人</view>
+        <view style='float:left;margin:30rpx 0 0 0%;color:#333333;font-size:16px;'>TA的书架10本</view>
       </view>
   </view>
 
   <!-- 邀请部分-->
   <view>
-    <view style="margin:18px 18px;font-size:16px;">邀请的好友</view>
+    <view style="margin:18px 18px;font-size:16px;">TA邀请的好友</view>
     <view style='margin-bottom:110rpx;'>
       <view style='margin:12px 0 8px 18px;width:92%;height:160rpx;border-bottom:1px #ccc solid;'>
           <image src='/public/images/bookfan.png' style="margin-top:30rpx;height:110rpx;width:110rpx;float:left"/>
@@ -45,7 +46,7 @@
       </view>
     </view>
     <view style='margin-top: -9px;border-top: 1px #ccc solid;background-color: #fff;position:fixed;left:0;bottom:0;height:110rpx;width:100%;'>
-      <view style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'>邀请好友</view>
+      <view style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'>添加好友</view>
     </view>
     
   </view>
