--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -14,7 +14,7 @@
   <!--  活动  -->
   <view class='yi_content'>
     <view style='height:220rpx;'>
-    <navigator url='/pages/lottery/lottery'>
+    <navigator url='/pages/lottery/lottery' redirect hover-class="other-navigator-hover">
       <view class='content_1'>
           <view class='img_pic'><image class='img_class' src='/public/images/vip_1_2.png' /></view>
           <view class='yi_wenzi'>
@@ -26,7 +26,7 @@
   
       <view></view>
 
-      <view class='content_2'>
+      <view class='content_2' bindtap='is_vip'>
           <view class='img_pic' style='margin-left:20rpx;'><image class='img_class' src='/public/images/vip_1_1.png' /></view>
           <view class='yi_wenzi'>
               <view style='font-size:14px;margin-left:20rpx;color:#333333'>书友会会员</view>
