--- a/pages/invitation/invitation.wxml
+++ b/pages/invitation/invitation.wxml
@@ -2,8 +2,8 @@
   <!--头像部分 -->
   <view class='top_back' style='background: url("/public/images/home_bg.png") no-repeat;'>
       <view class='head_img' >
-        <image src='{{avatarUrl}}' style="height:188rpx;width:178rpx" />
-        <view style="padding-top:20rpx;font-size:20px;color:#333333;margin-left:50rpx;">{{nickname}}<image src='/public/images/vip_1_5.png' style='width:60rpx;height:60rpx;margin-left:20rpx'/></view>
+        <image src='{{u_info.headimgurl}}' style="height:188rpx;width:178rpx" />
+        <view style="padding-top:20rpx;font-size:20px;color:#333333;margin-left:50rpx;">{{u_info.nickname}}<image src='/public/images/vip_1_5.png' style='width:60rpx;height:60rpx;margin-left:20rpx'/></view>
       </view>
       <view>
         <view style='float:left;margin:30rpx 0 0 10%;color:#333333;font-size:16px;width:50%'>已邀请好友{{invite_number}}人</view>
@@ -46,8 +46,11 @@
           </view>
       </view> -->
     </view>
+    <!-- <view style='text-align: center;margin-top: -9px;border-top: 1px #ccc solid;background-color: #fff;position:fixed;left:0;bottom:0;height:150rpx;width:100%;'>
+      <button style='background: #5bc53f;color: #fff;width:90%;margin-top:2%;height:73%;padding-top:1%;'  open-type="share">邀请好友</button>
+    </view> -->
     <view style='margin-top: -9px;border-top: 1px #ccc solid;background-color: #fff;position:fixed;left:0;bottom:0;height:110rpx;width:100%;'>
-      <view style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'>邀请好友</view>
+      <button open-type="share" style='text-align: center;width: 89%;background: #5bc53f;margin: 2% 5%;color: #fff;height:80%'>邀请好友</button>
     </view>
     
   </view>
