--- a/pages/bindCheck/bindCheck.wxml
+++ b/pages/bindCheck/bindCheck.wxml
@@ -5,7 +5,7 @@
           </view>
           <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </navigator>
-        <navigator url="/pages/bindWechat/bindWechat" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <navigator url="/pages/bindWechat/bindWechat?from=my" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__bd weui-cell_primary">
             <view>填写微信号</view>
           </view>
