--- a/pages/bindWechat/bindWechat.wxml
+++ b/pages/bindWechat/bindWechat.wxml
@@ -8,7 +8,7 @@
     <view type='tel' class="weui-cells weui-cells_after-title bindPhone">
       <view class="weui-cell weui-cell_input ">
         <view class="weui-cell__bd ">
-          <input name='captcha' class="weui-input " placeholder="输入微信号" />
+          <input name='wechat' class="weui-input " placeholder="输入微信号" />
         </view>
       </view>
     </view>
