--- a/pages/invitindex/invitindex.wxml
+++ b/pages/invitindex/invitindex.wxml
@@ -5,7 +5,7 @@
         <image src='{{u_info.headimgurl}}' style="height:188rpx;width:178rpx" />
         <view style="padding-top:20rpx;font-size:20px;color:#333333;margin-left:50rpx;">{{u_info.nickname}}<image src='/public/images/vip_1_5.png' style='width:60rpx;height:60rpx;margin-left:20rpx'/></view>
       </view>
-      <!-- <view style='text-align:center;color:#ccc;font-size:16px;'>微信号：dingke123456</view> -->
+       <view wx:if="{{wx_account}}" style='text-align:center;color:#ccc;font-size:16px;'>微信号：{{wx_account}}</view><view wx:else style='text-align:center;color:#ccc;font-size:16px;'></view> 
       <view>
         <view style='float:left;margin:30rpx 0 0 10%;color:#333333;font-size:16px;width:50%'>TA邀请好友{{invite_number}}人</view>
         <view style='float:left;margin:30rpx 0 0 0%;color:#333333;font-size:16px;'>TA的书架10本</view>
@@ -14,7 +14,7 @@
 
   <!-- 邀请部分-->
   <view>
-    <view style="margin:5px 18px;font-size:16px;">TA邀请的好友</view>
+    <view style="margin:40rpx 18px;font-size:16px;">TA邀请的好友</view>
     <view style='margin-bottom:110rpx;'>
       <view style='margin:12px 0 8px 18px;width:92%;height:160rpx;border-bottom:1px #ccc solid;' wx:key='aa' wx:for='{{invite_list}}'  wx:for-index="idx" wx:for-item="item" id='{{item.user_id}}'  bindtap='naviga_url' >
       <!-- <navigator url="/pages/invitindex/invitindex?userId={{item.user_id}}"> -->
@@ -48,7 +48,8 @@
       </view> -->
     </view>
     <view style='margin-top: -9px;border-top: 1px #ccc solid;background-color: #fff;position:fixed;left:0;bottom:0;height:110rpx;width:100%;'>
-      <view bindtap='add_friend' style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'>添加好友</view>
+      <view wx:if="{{btnIsShow}}" style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'></view>
+      <view wx:else bindtap='add_friend' style='text-align: center;width: 89%;background: #5bc53f;padding: 6px;margin: 2% 4%;color: #fff;'>添加好友</view>
     </view>
     
   </view>
